--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -6,9 +6,9 @@
   },
   "rich-text": {
     "props": {
-      "text": "*Hello, World!*",
+      "text": "**Hello, World!**",
       "textPosition": "RIGHT",
-      "blockClass": "b"
+      "font": "t-heading-5"
     }
   }
 }
