--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -3,7 +3,14 @@
     "blocks": [
       "rich-text",
       "info-card#button-right",
-      "info-card#button-left"
+      "info-card#button-left",
+      "flex-layout.row"
+    ]
+  },
+  "flex-layout.row":{
+    "children": [
+      "info-card#rethink",
+      "rich-text#delete"
     ]
   },
   "rich-text": {
@@ -39,6 +46,21 @@
       "callToActionUrl": "/sale/d",
       "textAlignment": "center",
       "blockClass": "metal" 
+    }
+  },
+  "info-card#rethink": {
+    "props": {
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/utensilios-cozinha-min.png",
+      "isFullModeStyle": true,
+      "headline": "Time to rethink your kitchen",
+      "callToActionText": "Discover",
+      "textPosition": "center"
+    }
+  },
+  
+  "rich-text#delete": {
+    "props": {
+      "text": "I'll be deleted soon"
     }
   }
 }
