--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -10,8 +10,26 @@
   "flex-layout.row":{
     "children": [
       "info-card#rethink",
-      "rich-text#delete"
+      "flex-layout.col"
     ]
+  },
+  "flex-layout.col": {
+    "children": [
+      "image#electronics",
+      "image#major-appliance"
+    ]
+  },
+  "image#electronics": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/electronics_banner___25d69b49f8224b369375e68513b4d593.png",
+      "maxWidth": "100%"
+    }
+  },
+  "image#major-appliance": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/major_appliance_banner___bb10093866a127345ddfbcca3efa5022.png",
+      "maxWidth": "100%"
+    }
   },
   "rich-text": {
     "props": {
@@ -55,12 +73,6 @@
       "headline": "Time to rethink your kitchen",
       "callToActionText": "Discover",
       "textPosition": "center"
-    }
-  },
-  
-  "rich-text#delete": {
-    "props": {
-      "text": "I'll be deleted soon"
     }
   }
 }
