--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,13 +1,14 @@
 {
   "store.home": { 
     "blocks": [
-      "responsive-layout ",
+      "responsive-layout.desktop#desktop",
+      "responsive-layout.mobile#mobile",
       "rich-text",
       "info-card#button-right",
       "info-card#button-left",
       "flex-layout.row",
       "shelf",
-      "slider-layout#home"
+      "slider-layout#home",
     ]
   },
   "responsive-layout.desktop#desktop": {
@@ -15,12 +16,7 @@
   },
   
   "responsive-layout.mobile#mobile": {
-    "children": ["rich-text#mobile", "image#mobile"],
-    "props": {
-      "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection",
-      "textPosition": "CENTER",
-      "textAlignment": "CENTER"
-    }
+    "children": ["rich-text#mobile", "image#mobile"]
   },
   "image#desktop": {
     "props": {
@@ -53,7 +49,7 @@
   
   "rich-text#mobile": {
     "props": {
-      "text": "# Your Coffee, Your Way \n ### New Coffee Makers Collection",
+      "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection",
       "textPosition": "CENTER",
       "textAlignment": "CENTER"
     }
