--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,14 +1,14 @@
 {
   "store.home": { 
     "blocks": [
-      "responsive-layout.desktop#desktop",
-      "responsive-layout.mobile#mobile",
       "rich-text",
       "info-card#button-right",
       "info-card#button-left",
       "flex-layout.row",
       "shelf",
       "slider-layout#home",
+      "responsive-layout.desktop#desktop",
+      "responsive-layout.mobile#mobile"
     ]
   },
   "responsive-layout.desktop#desktop": {
