--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,9 +1,11 @@
 {
   "store.product": {
     "children": [
-      "flex-layout.row#main"
+      "breadcrumb",
+      "flex-layout.row#qty-sku"
     ]
   },
+  
   "flex-layout.row#main": { 
     "props": { 
       "marginTop": 6
@@ -11,6 +13,13 @@
     "children": [
       "flex-layout.col#left",
       "flex-layout.col#right"
+    ]
+  },
+  "flex-layout.row#qty-sku": {
+    "children": [
+      "sku-selector",
+      "product-quantity",
+      "shipping-simulator"
     ]
   },
   "flex-layout.col#left": {
@@ -21,6 +30,7 @@
   "flex-layout.col#right": {
     "children": [
       "product-name",
+      "product-identifier.product",
       "product-price",
       "buy-button"
     ],
