--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -5,6 +5,13 @@
             "tab-layout#home"
         ]
     },
+    "iframe": {
+      "props": {
+        "src": "https://www.instagram.com/p/B973Qp8BacC/embed",
+        "width": 800,
+        "height": 1000
+      }
+    },
     "rich-text#home1": {
       "props": {
         "text": "# **Our history** \n ### **We were born from an internal VTEX hackathon!** \n That's right. VTEX's first Hackatheme (store theme hackathon) had 3 finalists. One of them was FlatFlat, the store that you're accessing now. FlatFlat was created by the engineers Afonso Praça and Sávio Muniz, together with designers Lucas Falcão and Augusto Barbosa, and new business director Maurício Baum. As the store was created by profissionals having the most diverse backgrounds, the result was an obvious one: they became the finalists with coolest layout among participants.",
@@ -29,7 +36,7 @@
       "tab-list.item#home2": {
         "props": {
           "tabId": "electronics",
-          "label": "Electronics"
+          "label": "Instagram"
         }
       },
     "tab-layout#home": {
@@ -61,7 +68,7 @@
       },
       "tab-content.item#home2": {
         "children": [
-          "rich-text#home2"
+          "iframe"
         ],
         "props": {
           "tabId": "electronics"
