--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -1,9 +1,30 @@
 {
     "header": {
         "blocks": [
+            "header-row#main-mobile",
+            "header-layout.desktop",
+            "header-layout.mobile"
+        ]
+    },
+    "header.full": {
+        "blocks": [
+            "header-layout.desktop",
+            "header-layout.mobile"
+        ]
+    },
+
+    "header-layout.desktop": {
+        "children": [
             "header-row#notification",
-            "header-row#main",
-            "header-row#main-mobile"
+            "header-row#main"
+        ]
+    },
+
+    "header-layout.mobile": {
+        "children": [
+            "header-row#notification",
+            "header-row#main-mobile",
+            "header-row#search"
         ]
     },
     "header-row#main": {
