--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -5,6 +5,13 @@
             "header-layout.mobile"
         ]
     },
+    "header-row#menu": {
+        "children": [
+            "header-spacer",
+            "vtex.menu@2.x:menu#categories",
+            "header-spacer"
+          ]
+    },
     "header.full": {
         "blocks": [
             "header-layout.desktop",
@@ -49,6 +56,7 @@
       },
     "header-row#main-mobile": {
         "children": [
+            "drawer",
             "logo",
             "header-spacer",
             "minicart",
