--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -22,7 +22,8 @@
     "header-layout.desktop": {
         "children": [
             "header-row#notification",
-            "header-row#main"
+            "header-row#main",
+            "header-row#menu"
         ]
     },
 
