--- a/store/blocks/footer.jsonc
+++ b/store/blocks/footer.jsonc
@@ -30,7 +30,8 @@
       },
       "accepted-payment-methods": {
           "props": {
-            "paymentMethods": ["mastercard", "visa", "diners club"]
+            "paymentMethods": ["mastercard", "visa", "diners club"],
+            "showInColor": true,
           }
       },
       "social-networks": {
@@ -39,7 +40,8 @@
             { "url": "https://facebook.com/foo", "name": "Facebook" },
             { "url": "https://twitter.com/foo", "name": "Twitter" },
             { "url": "https://instagram.com/foo", "name": "Instagram" }
-          ]
+          ],
+          "showInColor": true,
         }
       }
   }
